feature #82 :  feature #82 : Almost no use of VersionningUtil Reducing the use of AttachmentController Indexing all documents whatever their type per foreignKey in the service